--- a/export_excel.css
+++ b/export_excel.css
@@ -54,6 +54,9 @@ body {
     height: 40px;
 }
 
+.pd-top-15{
+    padding-top: 15px;
+}
 .report-head-box .right {
     float: right;
     margin: 0 5px;
@@ -149,6 +152,7 @@ body {
 #emp-score-page .view_page .el-tabs__nav .el-tabs__item {
     text-transform: uppercase;
     font-size: 14px;
+    font-weight: bold;
 }
 
 #emp-score-page .view_page .view_kpis_delay, .view_page .month_report_statistic {
@@ -166,10 +170,11 @@ body {
 }
 
 .reload_data label {
-    color: #337ab7;
+    color: #337ab7!important;
     font-size: 14px;
     font-weight: normal;
     line-height: 30px;
+    padding-right: 20px;
 }
 
 @media only screen and (min-width: 992px) {
@@ -653,5 +658,28 @@ div[id^='modalCreateFilter'] .left{
   bottom: 0;
   text-align: center;
   display: block;
+}
+
+.el-table_1_column_1 .cell{
+    margin-left: 10px;
+}
+
+.hover-icon-bin .icon-delete {
+    display: none;
+}
+
+.hover-icon-bin:hover .icon-delete{
+    display: block;
+}
+
+.el-table__row .view-kpi-btn{
+    display: none;
+}
+
+.hover-row .view-kpi-btn{
+    display: block;
+}
+.text-decoration .el-table_1_column_13  .cell a:hover{
+    text-decoration: none!important;
 }
 /*[END]------------performance/templates/report/report-score-excel.html------------[END]*/
