--- a/export_excel.css
+++ b/export_excel.css
@@ -679,7 +679,7 @@ div[id^='modalCreateFilter'] .left{
 .hover-row .view-kpi-btn{
     display: block;
 }
-.text-decoration .el-table_1_column_13  .cell a:hover{
+.el-table_1_column_13  .cell a:hover{
     text-decoration: none!important;
 }
 /*[END]------------performance/templates/report/report-score-excel.html------------[END]*/
